<resources>
    <string name="app_name">智能制造</string>
    <string name="login_title">智能制造系统</string>
    <string name="login_username">请输入工号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_btnLogin">登陆系统</string>
    <string name="login_btnReset">重置</string>
    <string name="login_lan">公司内网</string>
    <string name="login_wlan">外部网络</string>
    <string name="login_txtContent">程序下载</string>
    <string name="login_txtLicense">服务协议</string>
    <string name="master_username"></string>
    <string name="master_logout">注销</string>
    <string name="master_password">修改密码</string>
    <string name="master_action1">生产任务</string>
    <string name="master_action2">质量检验</string>
    <string name="master_action3">完工入库</string>
    <string name="master_action4">采购入库</string>
    <string name="master_action5">生产备货</string>
    <string name="master_action51">生产退货</string>
    <string name="master_action6">销售出货</string>
    <string name="master_action7">生产协同</string>
    <string name="master_action8">月末盘点</string>
    <string name="master_action9">区域管理</string>
    <string name="master_action10">查询报表</string>
    <string name="master_action11">零件图示</string>
    <string name="master_message_title">公告</string>
    <string name="master_message_content">欢迎使用华滋东江智能制造系统，系统异常请咨询信息室：\n\u2000\u2000联系人：施巍\n\u2000\u2000联系电话：13164661960</string>
    <string name="list_task1">总数:</string>
    <string name="list_task2">合格:</string>
    <string name="list_task3">差异:</string>
    <string name="list_flag_query">筛选:</string>
    <string name="list_flag1">原材料</string>
    <string name="list_flag2">标准件</string>
    <string name="list_flag3">外购件</string>
    <string name="list_flag4">自制件</string>
    <string name="query_title_name">零件号</string>
    <string name="query_title_dept">领料部门</string>
    <string name="query_title_dept_in">入库部门</string>
    <string name="query_title_dept_out">退料部门</string>
    <string name="query_hint_product_name">请输入零件号</string>
    <string name="query_hint_name">请输入部门/供应商</string>
    <string name="query_title_date">日期范围</string>
    <string name="query_hint_bdate">开始日期</string>
    <string name="query_hint_edate">结束日期</string>
    <string name="query_label1">近3天</string>
    <string name="query_label2">近7天</string>
    <string name="query_label3">首检</string>
    <string name="query_label4">中检</string>
    <string name="query_label5">未启用</string>
    <string name="query_label6">已启用</string>
    <string name="query_label7">已中止</string>
    <string name="query_more">来料多</string>
    <string name="query_less">来料少</string>
    <string name="query_button">查询</string>
    <string name="query_btnClear">清空</string>
    <string name="query_price">产量</string>
    <string name="query_stock">库容</string>
    <string name="query_material">零件</string>
    <string name="query_employee">考勤</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="dialog_title1">选择设备</string>
    <string name="dialog_save">保存</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_hidden">隐藏</string>
    <string name="dialog_show">显示</string>
    <string name="dialog_title2">设备清单</string>
    <string name="button_check_ok">检验完成</string>
    <string name="tab_pro1">待生产</string>
    <string name="tab_pro2">生产中</string>
    <string name="tab_pro3">已完成</string>
    <string name="tab_qc1">IQC</string>
    <string name="tab_qc2">PQC</string>
    <string name="tab_qc3">FQC</string>
    <string name="tab_qc4">OQC</string>
    <string name="tab_stock1">入库申请</string>
    <string name="tab_pur1">材料入库</string>
    <string name="tab_pur2">外购入库</string>
    <string name="tab_pur3">委外加工</string>
    <string name="tab_stock2">原材料备料</string>
    <string name="tab_stock3">半成品备料</string>
    <string name="tab_stock4">原材料退料</string>
    <string name="tab_stock5">半成品退料</string>
    <string name="tab_stock6">任务分配</string>
    <string name="tab_stock7">销售备货</string>
    <string name="tab_stock8">客户退回</string>
    <string name="tab_product1">车间退料</string>
    <string name="tab_product2">模具安装</string>
    <string name="tab_product3">生产异常</string>
    <string name="tab_product4">任务指派</string>
    <string name="tab_product5">IQC检验</string>
    <string name="tab_product6">PQC检验</string>
    <string name="tab_product7">FQC检验</string>
    <string name="tab_product8">OQC检验</string>
    <string name="tab_product9">库存检验</string>
    <string name="tab_product10">生产入库</string>
    <string name="tab_product11">任务分配</string>
    <string name="tab_product12">销售备货</string>
    <string name="tab_product13">销售退回</string>
    <string name="tab_product14">异常入库</string>
    <string name="tab_product15">清除扫码</string>
    <string name="tab_product16">收料确认</string>
    <string name="tab_product17">标签确认</string>
    <string name="tab_product18">车间盘点</string>
    <string name="tab_product19">零件查询</string>
    <string name="tab_query1">失败明细</string>
    <string name="tab_product20">标签补打</string>
    <string name="tab_product21">遗失补打</string>
    <string name="tab_product22">生产上料</string>
    <string name="tab_product23">打印机</string>
    <string name="tab_product24">材料标签</string>
    <string name="tab_product25">卷料确认</string>
    <string name="item_title_product_code">料件编码:</string>
    <string name="item_title_product_name">品名:</string>
    <string name="item_title_process">工序:</string>
    <string name="item_title_device">设备:</string>
    <string name="item_title_quantity">数量:</string>
    <string name="item_title_quantity_pcs">片数:</string>
    <string name="item_title_quantity_kg">重量:</string>
    <string name="item_title_docno">单号:</string>
    <string name="item_title_supply">供应商:</string>
    <string name="item_title_department">车间:</string>
    <string name="item_title_saler">客户:</string>
    <string name="item_title_models">规格:</string>
    <string name="item_title_inventory">库存:</string>
    <string name="item_title_label">标签:</string>
    <string name="item_title_stockid">仓库编号:</string>
    <string name="item_title_stock">仓库:</string>
    <string name="item_title_storage">储位:</string>
    <string name="item_title_stock_batch">批次:</string>
    <string name="item_title_mould">模具:</string>
    <string name="item_title_date">入库日期:</string>
    <string name="detail_submit">完成</string>
    <string name="detail_scan_submit">扫描核对</string>
    <string name="detail_qc_submit">合格</string>
    <string name="detail_cancel">取消</string>
    <string name="detail_qc_cancel">不合格</string>
    <string name="detail_refresh">刷新</string>
    <string name="detail_title1">良品:</string>
    <string name="detail_title2">不良品:</string>
    <string name="detail_title3">废品:</string>
    <string name="detail_title8">开始时间:</string>
    <string name="listitem_title1">序号</string>
    <string name="listitem_title2">零件号</string>
    <string name="listitem_title3">工序</string>
    <string name="listitem_title4">工序号</string>
    <string name="listitem_title5">上料</string>
    <string name="listitem_title51">消耗</string>
    <string name="listitem_title52">余料</string>
    <string name="listitem_title53">打印余料</string>
    <string name="listitem_title54">可报工量</string>
    <string name="listitem_title55">来料差</string>
    <string name="listitem_title56">报废</string>
    <string name="listitem_title6">类别</string>
    <string name="listitem_title7">QPA</string>
    <string name="listitem_title8">日期</string>
    <string name="listitem_title9">数量</string>
    <string name="listitem_title10">上料人员</string>
    <string name="check_stock_btn">设置</string>
    <string name="check_stock_query">查询结果</string>
    <string name="check_stock_get">盘点开始</string>
    <string name="check_stock_post">盘点结束</string>
    <string name="check_stock_error">空储位</string>
    <string name="cancel_check_stock_error">清除储位</string>
    <string name="oqc_check_title1">出货标签</string>
    <string name="oqc_check_title2">回仓标签</string>
    <string name="oqc_check_title3">原始标签</string>
    <string name="oqc_check_title4">出货标签:</string>
    <string name="oqc_check_title5">回仓标签:</string>
    <string name="oqc_check_title6">原始标签:</string>
    <string name="detail_content_title">盘点部门:</string>
    <string name="detail_content_title1">料件编码:</string>
    <string name="detail_content_title2">零件号:</string>
    <string name="detail_content_title21">零件名:</string>
    <string name="detail_content_title3">序号:</string>
    <string name="detail_content_title39">工序:</string>
    <string name="detail_content_title4">设备:</string>
    <string name="detail_content_title41">组合:</string>
    <string name="detail_content_title5">开始日期:</string>
    <string name="detail_content_title6">结束日期:</string>
    <string name="detail_content_title7">检验数量:</string>
    <string name="detail_content_title9">检验重量:</string>
    <string name="detail_content_title8">单据编号:</string>
    <string name="detail_content_title10">盘点量:</string>
    <string name="detail_content_title11">零件编码:</string>
    <string name="detail_content_title12">零件号:</string>
    <string name="detail_content_title13">零件名:</string>
    <string name="detail_content_title14">批次:</string>
    <string name="detail_content_title15">文件地址:</string>
    <string name="detail_content_title16">已报工量:</string>
    <string name="detail_content_title17">盘点仓库:</string>
    <string name="detail_content_title18">入库日期:</string>
    <string name="detail_content_title19">仓库:</string>
    <string name="detail_content_title20">储位:</string>
    <string name="detail_content_title22">托盘箱数:</string>
    <string name="detail_content_title221">整数箱:</string>
    <string name="detail_content_title222">尾数量:</string>
    <string name="detail_content_title23">仓库类别:</string>
    <string name="detail_content_title24">是否原材料仓</string>
    <string name="detail_content_title25">钢卷号:</string>
    <string name="detail_content_title26">零件编码:</string>
    <string name="detail_content_title27">单据编号:</string>
    <string name="detail_content_title28">客户:</string>
    <string name="detail_content_title29">二维码:</string>
    <string name="detail_content_title30">操作人员:</string>
    <string name="detail_content_title31">包装量:</string>
    <string name="detail_content_title32">已扫箱数:</string>
    <string name="detail_content_title33">容器:</string>
    <string name="detail_button4">查询</string>
    <string name="hint_device">请输入设备编号</string>
    <string name="query_data_textview_title1">零件</string>
    <string name="query_data_textview_title2">工序</string>
    <string name="query_data_textview_title3">设备</string>
    <string name="query_data_textview_title4">日期</string>
    <string name="query_data_textview_title5">人员</string>
    <string name="query_data_textview_title6">部门</string>
    <string name="query_data_editview_hint1">请输入零件号</string>
    <string name="query_data_editview_hint2">请输入工序号</string>
    <string name="query_data_editview_hint3">请输入设备号</string>
    <string name="query_data_editview_hint4">开始日期</string>
    <string name="query_data_editview_hint5">截至日期</string>
    <string name="query_data_editview_hint6">请输入工号</string>
    <string name="query_data_editview_hint7">请输入部门</string>
    <string name="query_data_button_title1">查询</string>
    <string name="query_data_button_title2">清除</string>
    <string name="query_data_list_title7">至</string>
    <string name="free_dialog_btn_title1">确定</string>
    <string name="free_dialog_btn_title2">取消</string>
    <string name="input_dialog_button1">1</string>
    <string name="input_dialog_button2">2</string>
    <string name="input_dialog_button3">3</string>
    <string name="input_dialog_button4">4</string>
    <string name="input_dialog_button5">5</string>
    <string name="input_dialog_button6">6</string>
    <string name="input_dialog_button7">7</string>
    <string name="input_dialog_button8">8</string>
    <string name="input_dialog_button9">9</string>
    <string name="input_dialog_button0">0</string>
    <string name="input_dialog_button_del">删除</string>
</resources>