<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/free_dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_dialog_title"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/teal_700"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/input_dialog_bumber"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/master_message"/>


    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:stretchColumns="0,1,2,3"
        android:shrinkColumns="0,1,2,3"
        android:orientation="horizontal">

        <TableRow>
            <Button
                android:id="@+id/btnNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button1"/>

            <Button
                android:id="@+id/btnNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button2"/>

            <Button
                android:id="@+id/btnNum3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button3"/>

            <Button
                android:id="@+id/btnNum4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button4"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button5"/>

            <Button
                android:id="@+id/btnNum6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button6"/>

            <Button
                android:id="@+id/btnNum7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button7"/>

            <Button
                android:id="@+id/btnNum8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button8"/>


        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button9"/>

            <Button
                android:id="@+id/btnNum0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button0"/>

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_dialog_button_del"/>

        </TableRow>

    </TableLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#E4E4E4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:text="@string/free_dialog_btn_title2"
            android:textColor="#7D7D7D"
            android:textSize="@dimen/free_dialog_button"
            android:textStyle="normal" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E4E4E4"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:text="@string/free_dialog_btn_title1"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/free_dialog_button"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>