<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QueryProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/queryProductToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_style"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title1"
            android:background="@drawable/textview_bg_gray"/>

        <EditText
            android:id="@+id/inputQueryProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint1"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title2"
            android:background="@drawable/textview_bg_gray"/>

        <EditText
            android:id="@+id/inputQueryProcess"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint2"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title3"
            android:background="@drawable/textview_bg_gray"/>

        <TextView
            android:id="@+id/inputQueryDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint3"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title5"
            android:background="@drawable/textview_bg_gray"/>

        <TextView
            android:id="@+id/inputQueryEmployee"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint6"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title6"
            android:background="@drawable/textview_bg_gray"/>

        <TextView
            android:id="@+id/inputQueryDept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint7"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_textview_title4"
            android:background="@drawable/textview_bg_gray"/>

        <EditText
            android:id="@+id/inputQuerySdate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint4"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/teal_700"
            android:text="@string/query_data_list_title7"
            android:background="@drawable/textview_bg_gray"/>

        <EditText
            android:id="@+id/inputQueryEdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/font14"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:hint="@string/query_data_editview_hint5"
            android:background="@drawable/textview_bg_gray"
            android:textColor="@color/master_message" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/list_flag_selector"
            android:focusable="false"
            android:text="@string/query_data_button_title2"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/list_detail_button"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/button_selector_red"
            android:focusable="false"
            android:layout_marginLeft="20dp"
            android:text="@string/query_data_button_title1"
            android:textColor="@color/master_loginout"
            android:textSize="@dimen/list_detail_button"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/linearlayout_gray_border"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/queryDataList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:dividerHeight="5dp"
            android:scrollbars="horizontal" />

    </LinearLayout>

</LinearLayout>