<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_style_white"
    android:orientation="horizontal">

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/font14"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:text="@string/listitem_title8"
        android:background="@drawable/textview_bg_gray"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/font14"
        android:textColor="@color/teal_700"
        android:layout_marginLeft="1dp"
        android:textStyle="bold"
        android:text="@string/listitem_title2"
        android:background="@drawable/textview_bg_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/font14"
        android:textColor="@color/teal_700"
        android:layout_marginLeft="1dp"
        android:textStyle="bold"
        android:text="@string/listitem_title9"
        android:background="@drawable/textview_bg_gray"/>

</LinearLayout>